<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="?selectableItemBackgroundBorderless"
        android:padding="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/profile"
        style="@style/titleTextStyle"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewProfile"
        app:layout_constraintStart_toEndOf="@+id/imageViewProfile"
        app:layout_constraintTop_toTopOf="@+id/imageViewProfile" />

    <ImageView
        android:id="@+id/ProfileHintImage"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/imageViewProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="80dp"
        android:background="@color/white"
        android:src="@drawable/profile" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="54dp"
        android:background="@color/white"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileHintImage">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/profile_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/home_bg"
                android:layout_marginTop="15dp"
                android:text="@string/username"
                android:paddingVertical="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/home_bg"
                android:layout_marginTop="35dp"
                android:text="@string/email"
                android:paddingVertical="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/profile_points"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/home_bg"
                android:layout_marginTop="35dp"
                android:text="@string/points"
                android:paddingVertical="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editButton"
            style="@style/btnStyle"
            android:layout_width="0dp"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/edit_profile"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>