<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="47dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white"
            android:src="@drawable/menu"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/javaedu"
        style="@style/titleTextStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp" />

    <ImageView
        android:id="@+id/homeLogo"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:src="@drawable/home_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appTitle"
        android:layout_marginTop="80dp" />

    <TextView
        android:id="@+id/com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/competencyTitle"
        style="@style/titleTextStyle"
        app:layout_constraintTop_toBottomOf="@id/homeLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp" />

    <TextView
        android:id="@+id/sel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_the_competency_level"
        style="@style/text_value_heading"
        app:layout_constraintTop_toBottomOf="@id/com"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/sel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:id="@+id/beginner"
            android:background="@drawable/home_bg"
            android:layout_width="0dp"
            android:layout_height="@dimen/home_card_height"
            android:layout_weight="1"
            android:layout_marginEnd="8dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/home_image_view_size"
        android:layout_height="@dimen/home_image_view_size"
        android:src="@drawable/beginner"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView5"
        style="@style/categoryHeadingTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beginner"
        android:textSize="17sp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/imageView2"
        android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/intermediate"
            android:background="@drawable/home_bg"
            android:layout_width="0dp"
            android:layout_height="@dimen/home_card_height"
            android:layout_weight="1"
            android:layout_marginEnd="8dp">

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="@dimen/home_image_view_size"
                android:layout_height="@dimen/home_image_view_size"
                android:src="@drawable/intermediate"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/textView55"
                style="@style/categoryHeadingTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intermediate"
                android:textSize="17sp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/imageView22"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/expert"
            android:background="@drawable/home_bg"
            android:layout_width="0dp"
            android:layout_height="@dimen/home_card_height"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView21"
                android:layout_width="@dimen/home_image_view_size"
                android:layout_height="@dimen/home_image_view_size"
                android:src="@drawable/expert"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/textView51"
                style="@style/categoryHeadingTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expert"
                android:textSize="17sp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/imageView21"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/menu_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>